new endpoint from houses or battles get house
